--- a/doc/README
+++ b/doc/README
@@ -2,7 +2,9 @@ HotshotCoin 1.0.1
 
 Copyright (c) 2013 NovaCoin Developers
 Copyright (c) 2011-2012 PPCoin Developers
+Copyright (c) 2018 ShardCoin Developers
 Copyright (c) 2018 HotshotCoin Developers
+
 Distributed under the MIT/X11 software license, see the accompanying
 file license.txt or http://www.opensource.org/licenses/mit-license.php.
 This product includes software developed by the OpenSSL Project for use in
